--- a/packages/frontend/electron/package.json
+++ b/packages/frontend/electron/package.json
@@ -43,6 +43,7 @@
     "@electron-forge/maker-dmg": "^6.4.2",
     "@electron-forge/maker-squirrel": "^6.4.2",
     "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/shared-types": "^6.4.2",
     "@electron/remote": "2.0.12",
     "@reforged/maker-appimage": "^3.3.1",
@@ -50,7 +51,7 @@
     "@types/uuid": "^9.0.5",
     "builder-util-runtime": "^9.2.1",
     "cross-env": "^7.0.3",
-    "electron": "^27.0.0",
+    "electron": "^27.1.0",
     "electron-log": "^5.0.0",
     "electron-squirrel-startup": "1.0.0",
     "electron-window-state": "^5.0.3",
