--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -159,7 +159,8 @@ jobs:
         env:
           SKIP_BUNDLE: true
           SKIP_WEB_BUILD: true
-        run: yarn workspace @affine/electron make --platform=darwin --arch=arm64
+          HOIST_NODE_MODULES: 1
+        run: yarn workspace @affine/electron package --platform=darwin --arch=arm64
 
       - name: Output check
         if: ${{ matrix.spec.os == 'macos-latest' && matrix.spec.arch == 'arm64' }}
